Revert "fix background image on mobile"

--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -105,6 +105,7 @@ h1 {
   background-attachment: fixed;
   max-width: 100%;
   height: 95vh;
+  background-position: center center;
 }
 
 h4 {
